tests/ui/inference/useless-turbofish-suggestion.stderr
error[E0282]: type annotations needed
  --> $DIR/useless-turbofish-suggestion.rs:19:16
   |
LL |     S.f::<u32, _>(42);
   |                ^ cannot infer type of the type parameter `B` declared on the method `f`

error[E0282]: type annotations needed
  --> $DIR/useless-turbofish-suggestion.rs:24:14
   |
LL |     S.f::<_, _>(42);
   |              ^ cannot infer type of the type parameter `B` declared on the method `f`

error[E0282]: type annotations needed
  --> $DIR/useless-turbofish-suggestion.rs:29:7
   |
LL |     S.f(42);
   |       ^ cannot infer type of the type parameter `B` declared on the method `f`
   |
help: consider specifying the generic arguments
   |
LL |     S.f::<i32, B>(42);
   |        ++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0282`.
